home&living and Grocery page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="SmileMart - Best Online Shopping in India" />
     <meta property="og:description" content="Shop electronics, fashion, home & living, beauty and more. Best deals with free shipping!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content=" ../public/apple-touch-icon.png">
+    <meta property="og:image" content="../public/apple-touch-icon.png">
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="SmileMart - Best Online Shopping in India" />
     <meta name="twitter:description" content="Shop electronics, fashion, home & living, beauty and more. Best deals with free shipping!" />
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:image" content="../public/apple-touch-icon.png" />
 
     <link rel="canonical" href="https://megastore.lovable.app" />
   </head>
